# task_tracker

./: .gitignore  pyproject.toml
conf/: __init__.py  celery.py  urls.py
conf/settings/: __init__.py  celery.py  celerybeat.py  debugtoolbar.py  email.py  external.py  logging.py  monitoring.py  rest_framework.py
devops/: .env-example  docker-compose.yml
devops/app/: Dockerfile
devops/postgres/: Dockerfile  init-postgres.sh  postgresql.conf
devops/redis/: Dockerfile
utils/celery/: env_router.py
utils/db/: debug.py  func.py
utils/helpers/: functions.py  logging.py  structlog.py
